objects/vlocity_ins__DocuSignEnvelopeObjectSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_ins__DocParentIdField__c</fullName>
        <description>Parent Id for document attachment.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Parent Id Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnvelopeObjectName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Envelope Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentObjectIdField__c</fullName>
        <description>Parent Object Id field in Envelope Object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Object Id Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecipientObjectName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope Object Setting</label>
</CustomObject>